crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_shared_snapshot@enum_shared_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type DocStatus string

const (
	DocStatusDraft     DocStatus = "draft"
	DocStatusPublished DocStatus = "published"
	DocStatusArchived  DocStatus = "archived"
)

type Documents struct {
	ID           int32      `gorm:"column:id;not null" json:"id"`
	Status       DocStatus  `gorm:"column:status;not null" json:"status"`
	ReviewStatus *DocStatus `gorm:"column:review_status" json:"review_status"`
}

func (Documents) TableName() string { return "documents" }
