crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_shared_snapshot@enum_shared_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum DocStatus {
  DRAFT @map("draft")
  PUBLISHED @map("published")
  ARCHIVED @map("archived")
}

model Documents {
  id Int
  status DocStatus
  review_status DocStatus?

  @@map("documents")
}
