crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class EventSeverity(models.TextChoices):
    INFO_LEVEL = "info-level"
    WARNING_LEVEL = "warning_level"
    ERROR_LEVEL = "ERROR_LEVEL"
    _1CRITICAL = "1critical"

class Events(models.Model):
    id = models.IntegerField()
    severity = models.CharField(max_length=13, choices=EventSeverity.choices)

    class Meta:
        managed = False
        db_table = "events"
