crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const eventsEventSeverity = pgEnum("events_event_severity", ["info-level", "warning_level", "ERROR_LEVEL", "1critical"]);

export const events = pgTable("events", {
  id: integer("id").notNull(),
  severity: eventsEventSeverity("severity").notNull(),
});
