crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type EventSeverity string

const (
	EventSeverityInfo_level   EventSeverity = "info-level"
	EventSeverityWarningLevel EventSeverity = "warning_level"
	EventSeverityERRORLEVEL   EventSeverity = "ERROR_LEVEL"
	EventSeverity1critical    EventSeverity = "1critical"
)

type Events struct {
	ID       int32         `gorm:"column:id;not null" json:"id"`
	Severity EventSeverity `gorm:"column:severity;not null" json:"severity"`
}

func (Events) TableName() string { return "events" }
