crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

enum EventSeverity {
    info-level,
    warning_level,
    ERROR_LEVEL,
    1critical;
}

@Entity
@Table(name = "events")
public class Events {

    @Column(name = "id", nullable = false)
    private Integer id;

    @Enumerated(EnumType.STRING)
    @Column(name = "severity", nullable = false)
    private EventSeverity severity;

    protected Events() {
    }
}
