crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum EventSeverity {
  INFO_LEVEL @map("info-level")
  WARNING_LEVEL @map("warning_level")
  ERROR_LEVEL
  X1CRITICAL @map("1critical")
}

model Events {
  id Int
  severity EventSeverity

  @@map("events")
}
