crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_special_values_snapshot@enum_special_values_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Eq, EnumIter, DeriveActiveEnum, Serialize, Deserialize, vespera::Schema)]
#[serde(rename_all = "camelCase")]
#[sea_orm(rs_type = "String", db_type = "Enum", enum_name = "events_event_severity")]
pub enum EventSeverity {
    #[sea_orm(string_value = "info-level")]
    InfoLevel,
    #[sea_orm(string_value = "warning_level")]
    WarningLevel,
    #[sea_orm(string_value = "ERROR_LEVEL")]
    ERRORLEVEL,
    #[sea_orm(string_value = "1critical")]
    N1critical,
}

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "events")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub severity: EventSeverity,
}

vespera::schema_type!(Schema from Model, name = "EventsSchema");
impl ActiveModelBehavior for ActiveModel {}
